---
source: extensions/migrate-nx/tests/migrate_nx_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"baz/moon.yml\")).unwrap()"
---
fileGroups:
  default:
  - glob: '**/*'
    cache: true
  production:
  - glob: '!jest.config.ts'
    cache: true
  - glob: '!**/?(*.)+(spec|test).ts'
    cache: true
language: javascript
tasks:
  build:
    command: js tsc
    args:
    - '--main'
    - $workspaceRoot/baz/src/main.ts
    - '--tsConfig'
    - $workspaceRoot/baz/tsconfig.lib.json
    deps:
    - ^:build
    inputs:
    - '@group(production)'
    outputs:
    - /dist/baz
  build.production:
    extends: build
    args:
    - '--tsConfig'
    - $workspaceRoot/baz/tsconfig-prod.lib.json
toolchain:
  default: node
